--- a/css/styles.css
+++ b/css/styles.css
@@ -48,9 +48,6 @@ body {
 .link {
   text-decoration: none;
 }
-.current {
-  color: var(--accent-color);
-}
 
 .section {
   padding: 94px 0px;
@@ -122,8 +119,26 @@ body {
   letter-spacing: 0.02em;
   color: var(--secondary-color);
 }
+
+.section-after {
+  position: relative;
+}
+
+.current::after {
+  content: ' ';
+  display: block;
+  background-color: var(--accent-color);
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  margin-top: 28px;
+  position: absolute;
+  bottom: 2px;
+}
+
 .current {
   color: var(--accent-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link:hover,
 .nav-link:focus {
@@ -295,11 +310,8 @@ body {
   width: 100%;
   background-color: rgba(47, 48, 58, 0.8);
   color: var(--primary-white-color);
-  transform: translateY(100%);
-}
-.services-list:hover .services-text {
-  transform: translateY(0%);
-}
+  }
+
 
 .team {
   background-color: var(--team-color);
@@ -572,6 +584,36 @@ body {
   margin: 15px;
   flex-basis: calc((100% - 3 * 30px) / 3);
 }
+
+.portfolio-link:hover .overlay,
+.portfolio-link:focus .overlay {
+  transform: translateY(0%);
+}
+
+.galery-img-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  font-size: 18px;
+  line-height: 1.56;
+  background-color: rgba(33, 150, 243, 0.9);
+  color: var(--primary-white-color);
+  padding-top: 63px;
+  padding-bottom: 63px;
+  padding-left: 24px;
+  padding-right: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+
+  transform: translateY(101%);
+  transition: transform 250ms linear;
+}
 .portfolio-link {
   text-decoration: none;
   display: block;
@@ -583,6 +625,10 @@ body {
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%), 0px 4px 4px rgb(0 0 0 / 6%),
     1px 4px 6px rgb(0 0 0 / 16%);
 }
+
+
+
+
 
 .works-list-title {
   margin-bottom: 4px;
@@ -607,4 +653,93 @@ body {
   border-right: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
+}
+
+
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms linear, visibility 250ms linear;
+}
+
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 528px;
+  height: 581px;
+  background: var(--primary-white-color);
+  transform: translate(-50%, -50%);
+  animation-name: changeModalBtn;
+  animation-duration: 2000ms;
+}
+
+/* Анимация */
+@keyframes changeModalBtn {
+  25% {
+    transform: scale(25%);
+    transform: opacity(25%);
+  }
+  50% {
+    transform: scale(50%);
+    transform: opacity(50%);
+  }
+  75% {
+    transform: scale(75%);
+    transform: opacity(75%);
+  }
+  100% {
+    transform: scale(100%);
+    transform: opacity(100%);
+  }
+}
+
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  border-radius: 50%;
+  border: 1px solid var(--team-color);
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  cursor: pointer;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.portf-modal-btn {
+  color: var(--secondary-color);
+  background-color: var(--team-color);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  border-color: transparent;
+  border-radius: 4px;
+  padding: 6px 22px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portf-modal-btn:hover,
+.portf-modal-btn:focus {
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
