--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,25 @@ body {
   margin: -1px;
 }
 
+@keyframes changeModalBtn {
+  25% {
+    transform: scale(25%);
+    transform: opacity(25%);
+  }
+  50% {
+    transform: scale(50%);
+    transform: opacity(50%);
+  }
+  75% {
+    transform: scale(75%);
+    transform: opacity(75%);
+  }
+  100% {
+    transform: scale(100%);
+    transform: opacity(100%);
+  }
+}
+
 .list {
   list-style: none;
 }
@@ -86,6 +105,8 @@ body {
   line-height: 1.192;
   letter-spacing: 0.03em;
   color: #000000;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo-second-part:hover,
 .logo-second-part:focus {
@@ -118,6 +139,8 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-after {
@@ -221,6 +244,8 @@ body {
   letter-spacing: 0.06em;
   padding: 10px 32px;
   color: var(--primary-white-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:hover,
 .button:focus {
@@ -310,8 +335,7 @@ body {
   width: 100%;
   background-color: rgba(47, 48, 58, 0.8);
   color: var(--primary-white-color);
-  }
-
+}
 
 .team {
   background-color: var(--team-color);
@@ -374,6 +398,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-item-link:hover,
 .team-item-link:focus {
@@ -415,6 +441,7 @@ body {
 }
 .client-item-link {
   display: inline-block;
+  color: #afb1b8;
   border: 1px solid #afb1b8;
   box-sizing: border-box;
   border-radius: 4px;
@@ -423,9 +450,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.client-item-link {
-  color: #afb1b8;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-item-icon {
@@ -462,6 +488,8 @@ body {
   line-height: 1.192;
   letter-spacing: 0.03em;
   color: var(--primary-white-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo-second-part-footer:hover,
 .logo-second-part-footer:focus {
@@ -494,6 +522,8 @@ body {
   line-height: 24px;
   letter-spacing: 0.03em;
   color: var(--footer-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-mail-item:hover,
 .footer-mail-item:focus,
@@ -626,10 +656,6 @@ body {
     1px 4px 6px rgb(0 0 0 / 16%);
 }
 
-
-
-
-
 .works-list-title {
   margin-bottom: 4px;
   font-weight: 700;
@@ -655,8 +681,6 @@ body {
   border-bottom: 1px solid #eeeeee;
 }
 
-
-
 .backdrop {
   position: fixed;
   top: 0;
@@ -677,26 +701,6 @@ body {
   transform: translate(-50%, -50%);
   animation-name: changeModalBtn;
   animation-duration: 2000ms;
-}
-
-/* Анимация */
-@keyframes changeModalBtn {
-  25% {
-    transform: scale(25%);
-    transform: opacity(25%);
-  }
-  50% {
-    transform: scale(50%);
-    transform: opacity(50%);
-  }
-  75% {
-    transform: scale(75%);
-    transform: opacity(75%);
-  }
-  100% {
-    transform: scale(100%);
-    transform: opacity(100%);
-  }
 }
 
 .close-btn {
