--- a/css/styles.css
+++ b/css/styles.css
@@ -630,8 +630,8 @@ body {
   line-height: 1.56;
   background-color: rgba(33, 150, 243, 0.9);
   color: var(--primary-white-color);
-  padding-top: 63px;
-  padding-bottom: 63px;
+  display: flex;
+  align-items: center;
   padding-left: 24px;
   padding-right: 24px;
   position: absolute;
@@ -640,7 +640,6 @@ body {
   height: 100%;
   width: 100%;
   overflow: auto;
-
   transform: translateY(101%);
   transition: transform 250ms linear;
 }
@@ -708,7 +707,7 @@ body {
   top: 8px;
   right: 8px;
   border-radius: 50%;
-  border: 1px solid var(--team-color);
+  border: 1px solid var(--text-color);
   width: 30px;
   height: 30px;
   background-color: transparent;
